[gd_scene load_steps=4 format=3 uid="uid://da057jdlnrf0y"]

[ext_resource type="Script" path="res://scripts/controllers/screen_control.gd" id="1_05hjf"]
[ext_resource type="Script" path="res://scripts/controllers/video_control.gd" id="1_xoisd"]

[sub_resource type="ViewportTexture" id="ViewportTexture_jnm0f"]
viewport_path = NodePath("SubViewport")

[node name="TVScreen" type="Node3D"]
script = ExtResource("1_05hjf")
Aspect_Ratio = 1

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
max_distance = 1000.0

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = SubResource("ViewportTexture_jnm0f")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(960, 540)

[node name="VideoController" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xoisd")

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/VideoController"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/VideoController/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="SubViewport/VideoController/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="SubViewport/VideoController/MarginContainer/VBoxContainer/AspectRatioContainer"]
layout_mode = 2
volume_db = -80.0
expand = true
loop = true

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/VideoController/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PauseButton" type="CheckBox" parent="SubViewport/VideoController/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Paused"

[node name="SeekSlider" type="HSlider" parent="SubViewport/VideoController/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="TimeLabel" type="Label" parent="SubViewport/VideoController/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "aaaaa"
